--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     implementation 'io.jsonwebtoken:jjwt:0.9.1' //자바 jwt 라이브러리
-    implementation 'javax.xml.bind:jaxb-api:2.3.1' // xml문서와 java객체간 매핑 자동화
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
+    testImplementation 'org.projectlombok:lombok:1.18.22'// xml문서와 java객체간 매핑 자동화
 
     runtimeOnly 'com.h2database:h2'
     compileOnly 'org.projectlombok:lombok'
