--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // oauth 를 위한 스타터 추가
     implementation 'io.jsonwebtoken:jjwt:0.9.1' //자바 jwt 라이브러리
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
     testImplementation 'org.projectlombok:lombok:1.18.22'// xml문서와 java객체간 매핑 자동화
